--- a/style.css
+++ b/style.css
@@ -144,6 +144,7 @@ img {
 
 .d-flex__card{
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: space-around;
   text-align: center;
@@ -198,4 +199,10 @@ img {
 
 .min__degree{
   color: var(--grayish-text);
+}
+
+@media (min-width: 700px){
+  .d-flex__card{
+    flex-direction: unset;
+  }
 }
