--- a/style.css
+++ b/style.css
@@ -201,6 +201,80 @@ img {
   color: var(--grayish-text);
 }
 
+.card__highlight{
+  background-color: var(--bk-blue);
+  margin: 2em;
+  padding: 1.8em;
+  color: var(--white-text);
+  width: 75%;
+}
+
+.sub__text {
+  font-size: 4rem;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.highlight__info{
+  font-size: 1.3rem;
+  font-weight: 500;
+}
+
+.highlight__bottom{
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1em;
+}
+
+.highlight__bottom span{
+  margin-right: .4em;
+  font-size: 1.4375rem;
+}
+
+.icon__location {
+  background-color: var(--circle-btn);
+  border: var(--circle-btn);
+  border-radius: 50%;
+  padding: .1em;
+  padding-top: .2em;
+  width: 1.5em;
+  height: 1.4375rem;
+}
+
+.humility__info{
+  margin: 0 auto;
+  width: 80%;
+}
+
+.humility__number{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: .6em;
+}
+
+.foreground{
+  display: block;
+  height: 0.8125em;
+  border-radius: 80px;
+  background-color: var(--white-text);
+  margin-bottom: .6em;
+}
+
+.foreground::after{
+  content: "";
+  display: block;
+  background-color: #FFEC65;
+  border-radius: 80px;
+  width: 60%;
+  height: 100%;
+  position: relative;
+  top: -19px;
+}
+
+.humility__percentage{
+  text-align: right;
+}
+
 @media (min-width: 700px){
   .d-flex__card{
     flex-direction: unset;
